# upcie

./: Makefile  meson.build
cijoe/configs/: hw-example.toml  ubuntu-2604-iommu_disabled.toml  ubuntu-2604-iommu_enabled.toml
cijoe/tasks/: cudamem_nvme.yaml  hipmem_nvme.yaml
docs/: DMA_BUF_MAPPING_TYPES_RFC_V1_ANALYSIS.md  IOMMUFD_UPSTREAM_PATCH_ROADMAP.md  IOMMUFD_UPSTREAM_SIMON_PRS_RELATION.md  WHY_IOMMUFD_NEEDS_PAL.md  iommu_map_explainer.en.md  iommu_map_explainer.md  iommufd_prs_analysis.md  iommufd_prs_commit_walkthrough.md  iommufd_prs_deep_dive.md  report_vfio_cudamem_p2p.md  vfio_vs_iommufd_report.en.md  vfio_vs_iommufd_report.md
example/: upcie_nvme_driver.c
experimental/: meson.build
experimental/vfio_cuda_iommu_map/: README.md  meson.build
experimental/vfio_cuda_iommu_map/include/upcie/: iommu_map.h
experimental/vfio_cuda_iommu_map/kernel/: .gitignore  Makefile  upcie_iommu_map.c
experimental/vfio_cuda_iommu_map/tests/: test_cudamem_iommu_map_nvme_readwrite.c
include/upcie/: cudamem_config.h  cudamem_dma.h  cudamem_heap.h  cudamem_mapping.h  dmabuf_importer.h  hipmem_config.h  hipmem_dma.h  hipmem_heap.h  hipmem_mapping.h  hostmem_config.h  hostmem_dma.h  iommu_map.h  pci.h  upcie.h  (+1 more)
kernel/: .gitignore  Makefile  upcie_dmabuf_importer.c  upcie_iommu_map.c
tests/: meson.build  test_cudamem_dmabuf_importer.c  test_cudamem_dmabuf_mmap_vfio.c  test_cudamem_iommu_map_nvme_readwrite.c  test_cudamem_iommufd.c  test_cudamem_nvme_readwrite.c  test_cudamem_uio_nvme_readwrite.c  test_cudamem_uio_orig.c  test_hostmem_iommu_map_nvme_readwrite.c
(+4 files in other folders)
